--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,11 @@ buildscript {
         google()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:7.0.0")
+        classpath('com.android.tools.build:gradle:8.1.4')
+
     }
+
+
 }
 
 allprojects {
