--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 21 15:26:25 EST 2023
-sdk.dir=C\:\\Users\\Manav31\\AppData\\Local\\Android\\Sdk
+#Wed Nov 22 16:00:16 EST 2023
+sdk.dir=/Users/apple/Library/Android/sdk
