--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="ca.yorku.eecs.mack.healthappdemo"
-          xmlns:android="http://schemas.android.com/apk/res/android"
-          android:versionCode="1"
-          android:versionName="1.0">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:versionCode="1"
+    android:versionName="1.0">
 
     <!-- NOTE: minSdkVersion and targetSdkVersion specified in build.gradle -->
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:theme="@android:style/Theme.Holo"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name">
+
+        <!-- WellnessGoalsActivity is the MAIN and LAUNCHER activity -->
+        <activity
+            android:name=".WellnessGoalsActivity"
+            android:label="@string/wellness_activity_label">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+
+        <!-- Your existing activity -->
         <activity
             android:name="ca.yorku.eecs.mack.healthappdemo.HealthAppDemo"
             android:label="@string/app_name">
@@ -20,6 +36,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <!-- Add other activities or components as needed -->
+
     </application>
 
 </manifest>
