create account page

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 26 03:59:27 EST 2023
-sdk.dir=/Users/nargisghiasi/Library/Android/sdk
+#Sun Nov 26 16:20:58 EST 2023
+sdk.dir=C\:\\Users\\manav31\\AppData\\Local\\Android\\Sdk
