--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
           android:versionCode="1"
           android:versionName="1.0">
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <!-- NOTE: minSdkVersion and targetSdkVersion specified in build.gradle -->
 
     <application
@@ -14,6 +16,7 @@
         android:supportsRtl="true"
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme">
+
         <activity
             android:name="ca.yorku.eecs.mack.healthappdemo.HealthAppDemo"
             android:label="@string/app_name">
@@ -80,5 +83,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
