--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Nov 26 16:20:58 EST 2023
-sdk.dir=C\:\\Users\\manav31\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/nargisghiasi/Library/Android/sdk
