--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
 
         <activity
             android:name="ca.yorku.eecs.mack.healthappdemo.HealthAppDemo"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW" />
@@ -27,7 +28,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DailyDiary_Radio">
+            android:name=".DailyDiary_Radio"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW" />
@@ -35,7 +37,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DailyDiary_Slider">
+            android:name=".DailyDiary_Slider"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW" />
@@ -43,7 +46,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Results">
+            android:name=".Results"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW" />
@@ -51,7 +55,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".WellnessGoalsActivity">
+            android:name=".WellnessGoalsActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW" />
@@ -59,7 +64,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DailyDiary_ListView">
+            android:name=".DailyDiary_ListView"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW" />
@@ -67,7 +73,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DailyDiary_Spinner">
+            android:name=".DailyDiary_Spinner"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW" />
@@ -75,7 +82,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".CreateAccountActivity">
+            android:name=".CreateAccountActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW" />
@@ -83,7 +91,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MyAccountActivity">
+            android:name=".MyAccountActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW" />
